--- a/client/src/Components/Styles/components/_selectDevice.scss
+++ b/client/src/Components/Styles/components/_selectDevice.scss
@@ -61,7 +61,7 @@
         }
 
         @include respond(sm-phone){
-            width: 80vw;
+            width: 83vw;
         }
     
 
